--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,15 @@ spring.datasource.url=jdbc:mysql://localhost:3306/employee_data
 spring.datasource.username=dalia_aly
 spring.datasource.password=MyPass
 spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+spring.jpa.show-sql=true
+
+logging.level.org.springframework=DEBUG
+logging.file.name=mylogfile.log
+
+
 # JWT Configuration
-jwt.secret=MySecretKey
-jwt.token.expiration=1800
+ jwt.secret=MySecretKey
+ jwt.token.expiration=1800
