--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.application.name=empcreator
-spring.datasource.url=jdbc:mysql://localhost:3306/employee_db
+spring.datasource.url=jdbc:mysql://localhost:3306/employee_data
 spring.datasource.username=dalia_aly
 spring.datasource.password=MyPass
 spring.jpa.hibernate.ddl-auto=update
+
+# spring.main.allow-bean-definition-overriding=true
+# spring.main.allow-circular-references=true
