User debugging complete

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,6 @@ spring.datasource.username=dalia_aly
 spring.datasource.password=MyPass
 spring.jpa.hibernate.ddl-auto=update
 
-# spring.main.allow-bean-definition-overriding=true
-# spring.main.allow-circular-references=true
+jwt.secret=YourSecretKey
+jwt.expiration=3600
+jwt.token.prefix=Bearer
