Address Autocompletion - UD

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,7 @@ spring.jpa.hibernate.ddl-auto=update
 jwt.secret=YourSecretKey
 jwt.expiration=3600
 jwt.token.prefix=Bearer
+
+# address validation properties
+google.maps.api.key=AIzaSyC_SHprG9orbpCtnNNxrENxQ61fuuY9UUY
+google.maps.api.baseurl=https://maps.googleapis.com/maps/api
