--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -13,5 +13,15 @@
     "name": "jwt.secret",
     "type": "java.lang.String",
     "description": "A description for 'jwt.secret'"
+  },
+  {
+    "name": "google.maps.api.key",
+    "type": "java.lang.String",
+    "description": "A description for 'google.maps.api.key'"
+  },
+  {
+    "name": "google.maps.api.baseurl",
+    "type": "java.lang.String",
+    "description": "A description for 'google.maps.api.baseurl'"
   }
 ]}
