--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.username=dalia_aly
 spring.datasource.password=MyPass
 spring.jpa.hibernate.ddl-auto=update
 
-jwt.secret=YourSecretKey
+jwt.secret=MySecretKey
 jwt.expiration=3600
 jwt.token.prefix=Bearer
 
